deploy/n8n/templates/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-collection@kubernetescrd
  name: n8n
  namespace: n8n
spec:
  rules:
    - host: n8n.nuc.one
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: n8n
                port:
                  number: 5678
